--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   ],
   "devDependencies": {
     "@symfony/webpack-encore": "^0.22.0",
+    "animate.css": "^3.7.2",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.4.5",
     "axios": "^0.19.0",
     "bootstrap": ">=4.3.1",
     "cssnano": "^4.1.8",
+    "import-glob-loader": "^1.1.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.5.3",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
